--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -516,7 +516,7 @@ img {
                             </a>
 
                              <a href="{% url 'admin_offering' %}" class="nav__link">
-                                <i class='bx bx-layer nav__icon' ></i>
+                                <i class='bx bx-tag-alt nav__icon' ></i>
                                 <span class="nav__name"> View Offerings</span>
                             </a>
 
@@ -542,15 +542,18 @@ img {
          {% block content %} 
 
            <!-- <h1 style="font-weight: bold; text-align: left; margin-left: 10px;font-size: 30px" class="txtColor">Admin</h1> -->
-         
-      <br>
-
+     <br>    
+<div style="margin-left: 13px; float: left; line-height: 30px;" >
+  <p><h4>
+    Note: &nbsp; In Uploading the Data it should follow the proper order. <br>
+    E.g. 
+  <i> <b>Upload School Offices</b> first, then follow the rest.</i>
+  </h4></p>
+</div>
     <img style="max-width: 700px;
   height: 495px; " 
   src="https://images.squarespace-cdn.com/content/v1/569398c29cadb61a0a1c632c/1586731980917-OHOK7LERGVCG99ZJUFRL/TWC_Online-Therapy_couples.png?format=750w"  
  >
-
-
 
            {% endblock %}  
          </div>
