--- a/templates/student/notif_detail.html
+++ b/templates/student/notif_detail.html
@@ -37,7 +37,7 @@ Notification_Detail
         box-shadow:
           0 9px 33px rgba(0, 0, 0, 0.07);
           width: 600px;
-    height: 250px;
+    height: 500px;
     float: center;
     margin: auto;
   }
@@ -187,9 +187,9 @@ outline: none;
   <div id="box">
       <div class="trow-list">
         <p class="Pbox">
-          You have a schedule appointment on {{object.date}} with a Start Session of {{object.start_time}}
-          and ends in {{object.end_time}} In {{object.subject_referred}} Subject, with the Reasons stated below:
-          <li class="Pbox" style="text-align:left;">{{object.reasons}}</li>
+          You have a schedule appointment on <b>{{object.date}}</b> with a Start Session of <b>{{object.start_time}}</b>
+          and ends in <b>{{object.end_time}}</b> In <b>{{object.subject_referred}}</b> Subject, with the Reasons stated below:
+          <li class="Pbox" style="text-align:left;"><b>{{object.reasons}}</b></li>
         </p>
     </div>
 
@@ -201,9 +201,9 @@ outline: none;
 
   <div class="trow-list">
     <p class="Pbox">
-      You have a schedule appointment on {{object.date}} with a Start Session of {{object.start_time}}
-      and ends in {{object.end_time}} With the Reasons stated below:
-      <li class="Pbox" style="text-align:left;">{{object.reasons}}</li>
+      You have a schedule appointment on <b>{{object.date}}</b> with a Start Session of <b> {{object.start_time}}</b>
+      and ends in <b>{{object.end_time}}</b> With the Reasons stated below:
+      <li class="Pbox" style="text-align:left;"><b>{{object.reasons}}</b></li>
     </p>
 </div>
 
