--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -581,7 +581,7 @@ th, td {
 
                 <div>
                 
-                              <p style="font-weight: bold;"> {{form.firstname }} {{form.lastname }} </p>
+                              <p style="font-weight: 800px; color:#19181B;"> <b>{{form.firstname }} {{form.lastname }} </b></p>
                                    
                                    </div>
               </div>
