--- a/templates/admin/depachoice.html
+++ b/templates/admin/depachoice.html
@@ -6,90 +6,86 @@ Schedule
 
 {% block content %} 
 <style>
-.depachoice{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 600px;
-  height: 330px;
-  border-radius: 5px;
-  background-color: #E3E4FA;
-  float: center;
-margin: auto;
-  text-align: center;
-   line-height: 40px; 
-}
-#id_semester{
-  width: 150px;
-}
-#id_school_year{
-  width: 200px;
-}
-.column{
- width:250px;
- float:center;
- margin-right:20px;
- padding: 10px;   
- text-align: left;
-}
-.row{
- width: 450px;
- float:center;
- text-align: left;
-}
-.row1{
- width: 450px;
- float:left;
- text-align: left;
-}
-
-/* BUTTONS */
-.buttons{
+  .depachoice{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 600px;
+    height: 300px;
+    border-radius: 5px;
+    background-color: #E3E4FA;
+    float: center;
   margin: auto;
-  height: 36px;
-  border: 5em;
-  cursor: pointer;
-  outline: none;
-  font-size: 16px;
-  -webkit-transform: translate(0);
-  transform: translate(0);
-  background-image: linear-gradient(45deg, #98b4ac, #4863A0);
-  padding: 0.7em 2em;
-  border-radius: 65px;
-  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-  -webkit-transition: box-shadow 0.25s;
-  transition: box-shadow 0.25s;
-  color: white;
-}
-.buttons .text {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #4863A0, #98b4ac);
-}
-
-.buttons:after {
-  content: "";
-  border-radius: 18px;
-  position: absolute;
-  margin: 4px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  background: #E5E4E2;
-}
-
-.buttons:hover {
-  background-image: linear-gradient(-45deg, #98b4ac, #4863A0);
-  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-}
-
-.buttons:hover .text {
-  background-image: linear-gradient(-45deg, #4863A0, #98b4ac);
-}
-
+    text-align: center;
+     line-height: 40px; 
+  }
+  #id_semester{
+    width: 150px;
+  }
+  #id_school_year{
+    width: 200px;
+  }
+  .column{
+   width:250px;
+   float:center;
+   margin-left: 10px;
+   padding: 10px;   
+   text-align: left;
+  }
+  .row{
+   width: 450px;
+   float:center;
+   text-align: left;
+  }
+  .column1{
+  
+    margin: 112px;
+  
+  
+  
+  }
+  .row1{
+  
+    margin: 112px;
+  
+  }
+  
+  /* BUTTONS */
+  .wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+  
+  .button {
+    width: 140px;
+    height: 30px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  
+    }
+  
+  .button:hover {
+    background-color: #95B9C7;
+    box-shadow: 0px 15px 20px #C9C0BB;
+    color: #fff;
+    transform: translateY(-7px);
+  }
+    </style>
   </style>
-<br> 
+<br>  <br> <br>
 <div class="depachoice">
   <form method="POST" action="">
     {% csrf_token %}
@@ -101,13 +97,15 @@ margin: auto;
       </div>
      
       </div>
-    <br> <br> <br>
-      <div class="column">
-        <div class="row"> 
-          <p> <button class="buttons" style="font-weight: bold; float: center;  color: #454545;">Submit</button></p> 
+    <br> 
+    <div class="column1">
+      <div class="row1"> 
+        <div class="wrap">
+          <button type="submit" class="button">Upload</button>
         </div>
-       
-        </div>
+      </div>
+     
+      </div>
 <br>
 </form>
 
