--- a/templates/counselor/notification.html
+++ b/templates/counselor/notification.html
@@ -181,6 +181,32 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
+.facU{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonN {
+width: 280px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+font-size: 13px;
+}
 
 </style>
 
@@ -188,10 +214,14 @@ outline: none;
         <div class="fac">
           <button type="submit" class="buttonF">Notifications</button>
         </div> 
+<br>
+{% if not notifications %}
+<div class="facU">
+  <button type="submit" class="buttonN">No Notifications Yet!</button>
+</div> 
+{% endif %}
 
-    {% if not notifications %}
-        <h4>No Notifications Yet!</h4>
-    {% endif %}
+ 
 <br>
 <table id="customers">
       <tr>
@@ -213,7 +243,8 @@ outline: none;
   
      {% else %}
      <tr>
-      <td><a style="color: black;" href="{% url 'counselor_view_detail_referred_students' notification.id notification.notification_type %}"><strong>{{ notification.created_by.username }}</strong>  <b style="color: black;">You have Counseling Session</b></a></td>
+      <td><a style="color: black;" href="{% url 'counselor_view_detail_referred_students' notification.id notification.notification_type %}">
+         <b style="color: black;">You have Counseling Session on <strong>{{ notification.schedDay|date }}</strong></b></a></td>
       <td><a style="color: black;" href="{% url 'counselor_view_detail_referred_students' notification.id notification.notification_type %}">{{ notification.created_at|timesince }} ago</a></td>
     </tr>
  
