--- a/templates/counselor/pending_students.html
+++ b/templates/counselor/pending_students.html
@@ -215,15 +215,43 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
+.facU{
 
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonN {
+width: 280px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+font-size: 13px;
+}
 </style>
 
   <div class="table-cont">
         <div class="fac">
           <button type="submit" class="buttonF">List of Pending Referred Students</button>
         </div>   
+        <br>
 {% if not objects %}
-  No Referrals Yet!
+<div class="facU">
+  <button type="submit" class="buttonN">No Referrals Yet!</button>
+</div> 
 {% endif %}
 
 <table class="table" style="color: #4863A0;">
@@ -249,7 +277,7 @@ outline: none;
 <td data-label="Name"> {{object.lastname}}, &nbsp; {{object.firstname}}</td>
 <td data-label="Date"><a>{{object.date}}</a></td>
 <td data-label="Status"><a>{{object.status|title}}</a></td>
-<td  ><a href="{% url 'counselor_view_detail_referred_students' object.id 'not finish' %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
+<td  ><a href="{% url 'counselor_view_detail_referred_students' object.id  %}" style="color: black; font-weight: 550;"><b>View More Information</b></a></td>
 
 </tr>
 </tbody>
