--- a/templates/counselor/schedule.html
+++ b/templates/counselor/schedule.html
@@ -171,17 +171,47 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
-
+  .facDay{
+  
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  
+  }
+  
+  .buttonDay {
+  width: 300px;
+  height: 55px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 600;
+  color: #fff;
+  background-color: #4863A0;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-left: 10px;
+  }
   </style>
   <br>
+    <div class="facDay">
+    <button type="submit" class="buttonDay">{{today}},  {{day_name}}</button>
+  </div> 
+  <br>
+
   <a style="color: #504A4B" 
   href="{% url 'counselor_view_another_sched' 1 %}"> 
            <div class="fac">
           <button type="submit" class="buttonF">Click here to view next day</button>
         </div> 
 </a> 
-  {{today}} <br>
- {{day_name}}
+
+ 
    <br> <br>
   <!-- //KANI WALAPA -->
 
@@ -205,11 +235,9 @@ outline: none;
             {% endif %} 
             {% for object in schedForToday %}
             {% if obj|stringformat:"s" == object.start_time|stringformat:"s" %}
-            <td>{{object.choice}}</td>
+            <td>{{object.choice}} {{object.offer_code}} {{object.subject_code}}</td>
             {% if object.choice|stringformat:"s" == "Class" %} 
-            <td data-label="Info"><a style="color: #504A4B"
-                href="{% url 'counselor_detail_schedule_class' object.offer_code object.sem_id object.academic_year %}"><b>View More Information</b></a> <br></td>
-  {% else %} 
+        {% else %} 
   <td data-label="Info"><a style="color: #504A4B" href="{% url 'counselor_detail_schedule_counseling' object.start_time object.end_time object.date %}"><b>View More Information</b></a> <br></td>
   
   {% endif %} 
