--- a/templates/director/assign_counselor.html
+++ b/templates/director/assign_counselor.html
@@ -130,6 +130,33 @@ p{
     line-height: 0.1px;
     
 }
+.fac{
+
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonF {
+  padding: 13px;
+width: 445px;
+height: 45px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+margin: auto;
+}
 </style>
 
  <section id="assignedC">
@@ -138,11 +165,9 @@ p{
           <br>
      <div class="cards" >
     
-<div class="table-row table-head">
-  <div class="table-cell first-cell">
-      <p class="listTitle">List of Counselors</p>
-  </div>
-</div>
+      <div class="fac">
+        <button type="submit" class="buttonF">List of Counselors</button>
+      </div> 
 
 <div class="table-box">
   {% for object in object_list %}
