--- a/templates/director/director_home.html
+++ b/templates/director/director_home.html
@@ -462,7 +462,7 @@ img {
     
       float: center;
       flex-wrap: row;
-      margin-left: auto;
+      margin: auto;
  float: center;
      
       
@@ -480,7 +480,7 @@ img {
         <header class="header">
             <div class="header__container">
                 <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold; margin-right:  900px;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
+                <a style="font-weight: bold; margin-right: auto;"href="{% url 'teacher_home_view' %}" class="header__logo">FOLLOW APP</a>
     
       <div>
                        
@@ -509,10 +509,10 @@ img {
                                 <span class="nav__name">Assigned Councilor</span>
                             </a>
 
-                            <a href="#deptStat" class="nav__link">
+                            <!-- <a href="#deptStat" class="nav__link">
                                 <i class='bx bx-navigation nav__icon'></i>
                                 <span class="nav__name">Department's Statistic</span>
-                            </a>
+                            </a> -->
                             
                         </div>
 
