--- a/templates/student/notification.html
+++ b/templates/student/notification.html
@@ -152,7 +152,7 @@ p{
       background-color: #E3E4FA;
       color: white;
     }
-    .fac{
+    .facU{
 
 display: flex;
 align-items: center;
@@ -160,7 +160,7 @@ justify-content: center;
 
 }
 
-.buttonF {
+.buttonFU {
 width: 420px;
 height: 55px;
 font-family: 'Roboto', sans-serif;
@@ -177,19 +177,44 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
+.facU{
 
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonN {
+width: 280px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+font-size: 13px;
+}
 </style>
 
 
         <div class="fac">
-          <button type="submit" class="buttonF">Notifications</button>
+          <button class="buttonFU">Notifications</button>
         </div> 
-
-
-
-
+        <br>
     {% if not notifications %}
-        No Notifications Yet!
+    <div class="facU"> 
+      <button class="buttonN">No Notifications Yet!</button>
+    </div> 
+
     {% endif %}
 <br>
 <table id="customers">
