--- a/templates/teacher/list_referred_students.html
+++ b/templates/teacher/list_referred_students.html
@@ -144,7 +144,32 @@
   cursor: pointer;
   outline: none;
   }
+.facU{
 
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonN {
+width: 280px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+font-size: 13px;
+}
 
 </style>
 <br>
@@ -153,9 +178,7 @@
   <button type="submit" class="buttonF">Referred Student </button>
 </div> 
 <br>
-{% if not object_list %}
-  No Referred Students Yet!
-{% endif %}
+
 
  <div class="table-wrapper">
   
@@ -183,7 +206,12 @@
         </tr>
         <tbody>
               {% endfor %}
+
     </table>
+    {% if not object_list %}
+    <p><b>No Referred Students Yet!</b></p>
+  {% endif %}
+
   </div>
 
 
