--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -703,7 +703,32 @@ transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
 }
+.facU{
 
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+.buttonN {
+width: 280px;
+height: 40px;
+font-family: 'Roboto', sans-serif;
+font-size: 15px;
+text-transform: uppercase;
+letter-spacing: 2.5px;
+font-weight: 600;
+color: #fff;
+background-color: #4863A0;
+border: none;
+border-radius: 45px;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+transition: all 0.3s ease 0s;
+cursor: pointer;
+outline: none;
+font-size: 13px;
+}
   </style>
 
     </head>
@@ -768,9 +793,15 @@ outline: none;
               
 
       <br>
+
+      {% if not object_list %}
+    <div class="facU"> 
+  <button class="buttonN">No Subjects Yet!</button>
+</div> 
+{% endif %}
       <div class="cards" >
 
-                  {% for object in object_list%}
+                  {% for object in object_list %}
                 
 <div class="cards_item">
   <a href="{% url 'teacher_view_students' object.offer_code_id %}"> 
